# arango-tools

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
.cursor/rules/: arango-frontend.mdc  checkpoint-regularly.mdc  comprehensiveness-over-simplification.md  incremental-over-atomic.mdc  test-what-you-touch.mdc
.cursor/skills/: package-for-arango-byoc-skill.md
.github/workflows/: ci.yml  release.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  connection.py  logging_config.py  main.py  runner.py
backend/app/routers/: connection.py  tools.py
backend/app/tools/: __init__.py  builder.py  registry.py
backend/tests/: test_app_health.py  test_app_static.py  test_builder.py  test_config.py  test_connection.py  test_logging_config.py  test_runner_shutdown.py
deploy/helm/arango-tools/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/helm/arango-tools/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts  ws.ts
frontend/src/components/: CommandPreview.tsx  ConnectionPanel.test.tsx  ConnectionPanel.tsx  HowTo.tsx  OutputConsole.tsx  Sidebar.tsx  ToolForm.test.tsx  ToolForm.tsx  ToolPanel.tsx
frontend/src/context/: ConnectionContext.tsx
